[gd_scene load_steps=3 format=3 uid="uid://b6csv6dn1wuoy"]

[ext_resource type="Script" path="res://Scenes/UI/inventory_item.gd" id="1_yqn5l"]

[sub_resource type="LabelSettings" id="LabelSettings_c1s8v"]
font_size = 14
shadow_color = Color(0, 0, 0, 0.392157)

[node name="InventoryItem" type="Button"]
custom_minimum_size = Vector2(60, 60)
script = ExtResource("1_yqn5l")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="InventoryText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_c1s8v")
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
